--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -6,7 +6,7 @@
   padding: 0;
   li {
     padding: 10px 0;
-    border-top: 1px solid #e8e8e8;
+    // border-top: 1px solid #e8e8e8;
   }
   .user {
     margin-top: 5em;
