--- a/app/assets/stylesheets/static_page.scss
+++ b/app/assets/stylesheets/static_page.scss
@@ -7,7 +7,7 @@
 .posts{
   list-style: none;
   padding: 0;
-  li {
+  li.content_item {
     padding: 10px 0;
     background-color: white;
     margin-bottom: 10px;
@@ -25,6 +25,11 @@
       padding: 5px 0;
     }
   }
+
+  // .content_item{
+  //   position: relative;
+  // }
+
   .timestamp {
     color: gray;
     display: block;
@@ -49,4 +54,49 @@ span.picture {
   input {
     border: 0;
   }
+}
+
+.option-area li{
+  padding-top: 0px;
+  cursor: pointer;
+  // position: absolute
+}
+
+.option-menu{
+  background-color: white;
+  // border: solid 1px;
+  box-shadow: 1px 1px 1px 1px #888888;
+  position: absolute;
+  padding-left: 5px;
+  padding-right: 20px;
+  margin-left: 420px;
+  margin-top: 20px; 
+}
+
+.option_item{
+  height: 5px;
+  width: 5px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.option{
+  position: absolute;
+  margin-left: 490px;
+  cursor: pointer;
+}
+
+.option-menu li{
+  padding: 10px 0;
+  margin-bottom: 10px;
+  width: 50%;
+}
+
+.option-menu ul{
+  // margin-left: 0px;
+}
+
+#post_content{
+  resize: none;
 }
