create comment, fix upload post's picture async jquery ajax

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -45,3 +45,13 @@ span.picture {
     border: 0;
   }
 }
+
+.new_comment {
+  margin-left: 20px;
+}
+
+.new_comment input{
+  width: 90%;
+  border-radius: 50px;
+}
+
