--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -50,8 +50,11 @@ span.picture {
   margin-left: 20px;
 }
 
-.new_comment input{
-  width: 90%;
-  border-radius: 50px;
+textarea#post_content{
+  width: 250px;
+  border-radius: 5px;
 }
 
+.content_item{
+  border-radius: 5px;
+}
