--- a/app/assets/stylesheets/static_page.scss
+++ b/app/assets/stylesheets/static_page.scss
@@ -101,3 +101,37 @@ span.picture {
 #post_content{
   resize: none;
 }
+
+.destroy-comment{
+  position: absolute
+}
+
+.edit-comment{
+  position: absolute;
+  margin-left: 50px;
+  cursor: pointer;
+}
+
+.comment_detail{
+  margin-bottom: 15px;
+  padding: 5px;
+  margin-left: 50px;
+  background-color: #EEF0F3;
+  border-radius: 5px;
+  width: 60%;
+}
+.edit_delete{
+  font-size: 10px;
+}
+
+.destroy-comment{
+  margin-top: 5px;
+  width: 35px;
+  cursor: pointer;
+}
+
+.edit-comment{
+  margin-top: 5px;
+  width: 35px;
+  cursor: pointer;
+}
