--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -6,21 +6,26 @@
   .option-menu
     %li 
       .destroy-post{'data-id': "#{post.id}" } Delete
-    %li Edit
+    %li
+      .edit-post{'data-id': "#{post.id}" } Edit
 %li.content_item
   %span.content
     = post.content
+    - post.pictures.each do |p|
+      = image_tag p.picture_url.url
   %span.timestamp
-    = time_ago_in_words(post.created_at)
+    = time_ago_in_words(post.updated_at)
     ago.
-  %hr/
   .comment-area
     - post.comments.each do |comment|
+      %hr
       %span.comment_item
-        = comment.user.name
-        = comment.content
-      %br
+        .comment_detail
+          = link_to comment.user.name
+          .comment-show-area
+            %span= comment.content
+          .edit_delete
+            .destroy-comment{'data-id': "#{comment.id}", 'post-id': "#{post.id}" } Delete
+            .edit-comment{'data-id': "#{comment.id}", 'post-id': "#{post.id}" } Edit
   = form_for ([post, post.comments.build]) do |f|
     = f.text_field :content, placeholder: "Comment ...", class: "comment_textbox"
-    .submit_comment
-      = f.submit
