--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -1,2 +1,4 @@
-%h1 Posts#edit
-%p Find me in app/views/posts/edit.html.haml
+= form_for @post do |f|
+  = f.text_field :content, class: "edit_post"
+- @post.pictures.each do |p|
+  = image_tag p.picture_url.url
