--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -1,4 +1,8 @@
 = form_for @post do |f|
   = f.text_field :content, class: "edit_post"
-- @post.pictures.each do |p|
-  = image_tag p.picture_url.url
+  = f.fields_for :pictures do |p|
+    = image_tag p.object.picture_url.url
+    = p.file_field :picture_url, id: "file_button_edit"
+  = f.submit "Update", class: "btn btn-primary edit_post_form"
+-# - @post.pictures.each do |p|
+-#   = image_tag p.picture_url.url
