--- a/app/views/shared/_post_form.html.haml
+++ b/app/views/shared/_post_form.html.haml
@@ -1,7 +1,7 @@
 #form_post
-  = form_for @post do |f|
+  = form_for @post, multipart: true do |f|
     .field
       = f.text_area :content, placeholder: "Compose new post"
       = f.fields_for :pictures do |p|
-        = p.file_field :picture_url, id: "file_button"
+        = p.file_field :picture_url, id: "file_button", multiple: true
     = f.submit "Post", class: "btn btn-primary post_form"
