--- a/app/views/likes/unlike.html.haml
+++ b/app/views/likes/unlike.html.haml
@@ -1,2 +1,3 @@
 .count_like= post.likes.count           
-.destroy-like{'data-id': "#{like.id}", 'post-id': "#{post.id}" } Delete
+.destroy-like
+  %button.destroy-like-button{'data-id': "#{like.id}", 'post-id': "#{post.id}" } Delete
