--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -3,6 +3,7 @@
   = f.fields_for :pictures do |p|
     = image_tag p.object.picture_url.url
     = p.file_field :picture_url, id: "file_button_edit"
+    %button.destroy-picture-button{ 'post-id': "#{post.id}" } Delete
   = f.submit "Update", class: "btn btn-primary edit_post_form"
 -# - @post.pictures.each do |p|
 -#   = image_tag p.picture_url.url
