--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -7,10 +7,7 @@
 }
 
 .comment-area{
-  border-top: solid 1px #E2EAF0;
-  border-bottom: solid 1px #E2EAF0;
   margin-top: 10px;
-  padding-top: 10px;
   padding-bottom: 10px; 
 }
 input#comment_content.comment_textbox{
@@ -23,4 +20,8 @@ select:focus,
 textarea:focus,
 button:focus {
     outline: none;
+}
+
+.like-area i.fa.fa-comments-o{
+  margin-left: 150;
 }
