--- a/app/assets/stylesheets/static_page.scss
+++ b/app/assets/stylesheets/static_page.scss
@@ -20,6 +20,7 @@
   .content {
     display: block;
     margin-left: 60px;
+    margin-right: 60px;
     img {
       display: block;
       padding: 5px 0;
@@ -33,7 +34,6 @@
   .timestamp {
     color: gray;
     display: block;
-    margin-left: 60px;
   }
   // .avatar {
   //   float: left;
@@ -69,7 +69,7 @@ span.picture {
   position: absolute;
   padding-left: 5px;
   padding-right: 20px;
-  margin-left: 420px;
+  margin-left: 490px;
   margin-top: 20px; 
   display: none;
 }
@@ -84,7 +84,7 @@ span.picture {
 
 .option{
   position: absolute;
-  margin-left: 490px;
+  margin-left: 555px;
   cursor: pointer;
 }
 
@@ -115,7 +115,7 @@ span.picture {
 .comment_detail{
   margin-bottom: 15px;
   padding: 5px;
-  margin-left: 50px;
+  margin-left: 110px;
   background-color: #EEF0F3;
   border-radius: 5px;
   width: 60%;
@@ -134,4 +134,36 @@ span.picture {
   margin-top: 5px;
   width: 35px;
   cursor: pointer;
+}
+.destroy-like i{
+  margin-top: 1px;
+  margin-left: 5px;
+  font-size: 20px;
+  color: red;
+}
+
+button.heart{
+  border:none;
+  background-color: white;
+  font-size: 20px;
+}
+
+.like-area{
+  margin-top: 10px;
+}
+
+.stat li{
+  margin-left: -40px !important;
+  margin-right: 55px;
+}
+
+.stat .name{
+  cursor: pointer;
+  font-weight: bold;
+  color: black;
+}
+
+.stat .count{
+  font-weight: bold;
+  color: black;
 }
