--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,7 +1,27 @@
-.comment_detail
-  = link_to comment.user.name
-  .comment-show-area
-    %span= comment.content
-  .edit_delete
-    .destroy-comment{'data-id': "#{comment.id}", 'post-id': "#{post.id}" } Delete
-    .edit-comment{'data-id': "#{comment.id}", 'post-id': "#{post.id}" } Edit
+.like-area
+  - if post.likes.find_by(user: current_user).nil?
+    = form_for ([post, post.likes.build]) do |f|
+      = f.button "", type: :submit , class: "fa fa-heart-o heart"
+      = post.likes.count
+  - else
+    .destroy-like
+      %i.fa.fa-heart-o.destroy-like-button{'data-id': "#{post.likes.find_by(user: current_user).id}", 'post-id': "#{post.id}"}
+      = post.likes.count
+  %i.fa.fa-comments-o
+  = post.comments.count
+  - if post.comments.count > 0
+    .comment-area
+      - post.comments.each do |comment|
+        %span.comment_item
+          .avatar-comment-area 
+            = image_tag comment.user.avatar.url
+          .comment_detail
+            = link_to comment.user.name
+            = time_ago_in_words(comment.updated_at)
+            .comment-show-area
+              %span= comment.content
+            .edit_delete
+              .destroy-comment{'data-id': "#{comment.id}", 'post-id': "#{post.id}" } Delete
+              .edit-comment{'data-id': "#{comment.id}", 'post-id': "#{post.id}" } Edit
+  = form_for ([post, post.comments.build]) do |f|
+    = f.text_field :content, placeholder: "Comment ...", class: "comment_textbox"
