--- a/app/views/likes/unlike.html.haml
+++ b/app/views/likes/unlike.html.haml
@@ -1,3 +1,3 @@
-.count_like= post.likes.count           
 .destroy-like
-  %button.destroy-like-button{'data-id': "#{like.id}", 'post-id': "#{post.id}" } Delete
+  %i.fa.fa-heart-o.destroy-like-button{'data-id': "#{post.likes.find_by(user: current_user).id}", 'post-id': "#{post.id}"}
+  = post.likes.count
