--- a/app/views/static_page/home.html.haml
+++ b/app/views/static_page/home.html.haml
@@ -1,12 +1,14 @@
 .container
   .row
-    %aside.col-md-4
+    %aside.col-md-3
       %section.user_info
         = render 'shared/user_info'
       %section.post_form
         = render 'shared/post_form'
-    .col-md-8.posts
+    .col-md-9.posts
       - @posts.each do |post|
+        .avatar-area 
+          = image_tag post.user.avatar.url
         .option-area
           .option
             %span.option_item
@@ -19,28 +21,39 @@
               .edit-post{'data-id': "#{post.id}" } Edit
         %li.content_item
           %span.content
-            = post.content
+            %span.timestamp
+              = link_to post.user.name, wall_path(post.user.id)
+              = time_ago_in_words(post.updated_at)
+              ago.
+            %span.content-area
+              = post.content
             - post.pictures.each do |p|
               = image_tag p.picture_url.url
-          %span.timestamp
-            = time_ago_in_words(post.updated_at)
-            ago.
-          .count_like= post.likes.count
-          - if post.likes.find_by(user: current_user).nil?
-            = form_for ([post, post.likes.build]) do |f|
-              = f.submit :like
-          - else
-            .destroy-like
-              %button.destroy-like-button{'data-id': "#{post.likes.find_by(user: current_user).id}", 'post-id': "#{post.id}" } Delete
-          .comment-area
-            - post.comments.each do |comment|
-              %span.comment_item
-                .comment_detail
-                  = link_to comment.user.name
-                  .comment-show-area
-                    %span= comment.content
-                  .edit_delete
-                    .destroy-comment{'data-id': "#{comment.id}", 'post-id': "#{post.id}" } Delete
-                    .edit-comment{'data-id': "#{comment.id}", 'post-id': "#{post.id}" } Edit
-          = form_for ([post, post.comments.build]) do |f|
-            = f.text_field :content, placeholder: "Comment ...", class: "comment_textbox"
+          .like-area
+            .like
+              - if post.likes.find_by(user: current_user).nil?
+                = form_for ([post, post.likes.build]) do |f|
+                  = f.button "", type: :submit , class: "fa fa-heart-o heart"
+                  = post.likes.count
+              - else
+                .destroy-like
+                  %i.fa.fa-heart-o.destroy-like-button{'data-id': "#{post.likes.find_by(user: current_user).id}", 'post-id': "#{post.id}"}
+                  = post.likes.count
+            %i.fa.fa-comments-o
+            = post.comments.count
+            - if post.comments.present?
+              .comment-area
+                - post.comments.each do |comment|
+                  %span.comment_item
+                    .avatar-comment-area 
+                      = image_tag comment.user.avatar.url
+                    .comment_detail
+                      = link_to comment.user.name
+                      = time_ago_in_words(comment.updated_at)
+                      .comment-show-area
+                        %span= comment.content
+                      .edit_delete
+                        .destroy-comment{'data-id': "#{comment.id}", 'post-id': "#{post.id}" } Delete
+                        .edit-comment{'data-id': "#{comment.id}", 'post-id': "#{post.id}" } Edit
+            = form_for ([post, post.comments.build]) do |f|
+              = f.text_field :content, placeholder: "Comment ...", class: "comment_textbox"
