--- a/app/views/friendships/destroy.html.haml
+++ b/app/views/friendships/destroy.html.haml
@@ -1,2 +1,2 @@
-.destroy-friend
-  .destroy-friendship-button{'friendship-id': "#{friendship.id}"} Unfriend  
+.destroy-friendship-button{'friendship-id': "#{friendship.id}"} 
+  %span.glyphicon.glyphicon-remove-circle
