--- a/app/views/friendships/update.html.haml
+++ b/app/views/friendships/update.html.haml
@@ -1,2 +1,3 @@
-<h1>Friendships#update</h1>
-<p>Find me in app/views/friendships/update.html.erb</p>
+.accept-friend
+  .accept-friendship-button{'friendship-id':"#{@friendship.id}"}
+    %span.glyphicon.glyphicon-ok-circle
