--- a/app/views/shared/_user_info.html.haml
+++ b/app/views/shared/_user_info.html.haml
@@ -4,6 +4,7 @@
     %a
       %span.name Friend
       %span.count
+        = current_user.user_responses.where(status: "accept").count
   %li
     %a
       %span.name Post
