scroll load data

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -25,3 +25,9 @@ button:focus {
 .like-area i.fa.fa-comments-o{
   margin-left: 150;
 }
+
+.time-comment{
+  margin-top: 5px;
+  display: -webkit-inline-box;
+  margin-left: 90px;
+}
