--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -19,6 +19,9 @@
       display: block;
       padding: 5px 0;
     }
+    max-width: 80%;
+    word-wrap: break-word;
+    width: max-content;
   }
   .timestamp {
     color: gray;
