--- a/app/views/static_page/home.html.haml
+++ b/app/views/static_page/home.html.haml
@@ -37,8 +37,7 @@
           %span.content
             %span.timestamp
               = link_to post.user.name, wall_path(post.user.id)
-              = time_ago_in_words(post.updated_at)
-              ago.
+              
             %span.content-area
               = post.content
             - post.pictures.each do |p|
@@ -63,11 +62,13 @@
                       = image_tag comment.user.avatar.url
                     .comment_detail
                       = link_to comment.user.name, wall_path(comment.user.id)
-                      = time_ago_in_words(comment.updated_at)
                       .comment-show-area
                         %span= comment.content
                       .edit_delete
                         .destroy-comment{'data-id': "#{comment.id}", 'post-id': "#{post.id}" } Delete
                         .edit-comment{'data-id': "#{comment.id}", 'post-id': "#{post.id}" } Edit
+                        .time-comment
+                          = time_ago_in_words(post.updated_at)
+                          ago.
             = form_for ([post, post.comments.build]) do |f|
               = f.text_field :content, placeholder: "Comment ...", class: "comment_textbox"
