--- a/app/views/static_page/load_post.html.haml
+++ b/app/views/static_page/load_post.html.haml
@@ -7,10 +7,14 @@
       %span.option_item
       %span.option_item
     .option-menu
-      %li 
-        .destroy-post{'data-id': "#{post.id}" } Delete
+      - if post.user.id == current_user.id
+        %li 
+          .destroy-post{'data-id': "#{post.id}" } Delete
+        %li
+          .edit-post{'data-id': "#{post.id}" } Edit
       %li
-        .edit-post{'data-id': "#{post.id}" } Edit
+        .more-content{'data-id': "#{post.id}"}
+          = link_to "Show", post_path(post)
   %li.content_item
     %span.content
       %span.timestamp
@@ -31,6 +35,10 @@
           .destroy-like
             %i.fa.fa-heart-o.destroy-like-button{'data-id': "#{post.likes.find_by(user: current_user).id}", 'post-id': "#{post.id}"}
             = post.likes.count
+        .share               
+          %i.glyphicon.glyphicon-share-alt{'data-id': "#{post.id}"}
+            = link_to '',new_post_share_path(post_id: post.id)
+          = post.shares.count
       %i.fa.fa-comments-o
       = post.comments.count
       - if post.comments.present?
