--- a/app/views/shared/_user_info.html.haml
+++ b/app/views/shared/_user_info.html.haml
@@ -4,7 +4,7 @@
     %a
       %span.name Friend
       %span.count
-        = current_user.user_responses.where(status: "accept").count
+        = Friendship.where('user_request = ? or user_response = ? and status = ?',current_user.id, current_user.id, '1').count
   %li
     %a
       %span.name Post
