--- a/app/views/static_page/wall.html.haml
+++ b/app/views/static_page/wall.html.haml
@@ -8,7 +8,7 @@
             %a
               %span.name Friend
               %span.count
-                = @user.user_responses.where(status: "accept").count
+                = Friendship.where('user_request = ? or user_response = ? and status = ?',current_user.id, current_user.id, '1').count     
           %li
             %a
               %span.name Post
