add rubocop, search

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,7 +9,7 @@
  * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
- * 
+ *
  *= require_tree .
  *= require_self
  *= require font-awesome
@@ -378,4 +378,19 @@ ul.stat li{
   height: 80%;
   width: 80%;
   border-radius: 0px;
+}
+
+.search_result{
+  position: relative;
+  border: solid 1px wheat;
+  list-style: none;
+  background-color: white;
+  width: 250px;
+  margin-left: 35px;
+  margin-top: -9px;
+  display: none;
+}
+
+.search_result li{
+  margin: auto
 }
